--- a/styles/global.css
+++ b/styles/global.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 
-: root {
+:root {
     --brand-color-light: #60A5FA;
     --brand-color-dark: #1D4ED8;
     --bg-color: #0F172A ;
@@ -12,10 +12,33 @@
     --text-color-primary: #F1F5F9 ;
     --text-color-secondary: #CBD5E1 ;
 
+    --font-family: 'archivo', sans-serif;
+    --h1: 800 24px/135% var(--font-family);
+    --h2: 800 16px/140% var(--font-family);
+    --h3: 800 14px/140% var(--font-family);
+    --text-span: 600 14px/145% var(--font-family);
+    --text: 400 16px/160% var(--font-family);
+    --text-sm: 400 14px/160% var(--font-family);
+
 }
 
 body {
+    font: var(--text);
     color: var(--text-color-primary);
     background-color: var(--bg-color);
 
+}
+
+a {
+    text-decoration: none;
+    color: inherit; /*serve para herdar a cor definida no body */
+
+}
+
+a:hover {
+    color: var(--brand-color-light); /* (hover) serve para dar o efeito de mudança de cor quando passa o mouse em cima */
+}
+
+h1, h2, h3 {
+    font: inherit;
 }
