--- a/styles/global.css
+++ b/styles/global.css
@@ -43,6 +43,10 @@ h1, h2, h3 {
     font: inherit;
 }
 
+img {
+    max-width: 100%;
+}
+
 .container {
     max-width: 1280px;
     padding: 28px;
@@ -50,10 +54,7 @@ h1, h2, h3 {
     
 }
 
-.grid {
-    display: grid;
+main {
+    margin-top: 40px;
 }
 
-.grid-flow-col { /* fluxo de coluna, deixa elementos que estão em linha para coluna*/
-    grid-auto-flow: column;
-}
