--- a/styles/global.css
+++ b/styles/global.css
@@ -58,3 +58,13 @@ main {
     margin-top: 40px;
 }
 
+.content-tag {
+    display: inline-block;
+    background-color: var(--brand-color-dark);
+    border-radius: 4px;
+    padding: 4px 8px;
+    font: 500 10px/1.2 var(--font-family);
+    text-transform: uppercase;
+    color: var(--text-color-primary);
+}
+
