--- a/styles/sections.css
+++ b/styles/sections.css
@@ -28,6 +28,10 @@ figcaption {
     bottom: 0;
     padding: 24px;
 
+    &:has(.text-lg){ /* è uma condicional onde se tiver o text-lg vai aplicar o padding*/
+        padding: 12px;
+    }
+
     h2 {
         margin-top: 8px;
     }
