--- a/styles/header.css
+++ b/styles/header.css
@@ -8,11 +8,11 @@
     }
 
     /*nesting css */
-    div:nth-child(2) {
+    figure:nth-child(2) {
         margin-inline: auto;
     }
 
-    div:nth-child(3) {
+    figure:nth-child(3) {
         justify-self: end;
     }
 }
