--- a/styles/sections.css
+++ b/styles/sections.css
@@ -1,3 +1,20 @@
+section header {
+    border-top: 1px solid var(--stroke-color);
+    padding-block: 12px 24px;
+    font: var(--text-span);
+
+    a {
+       justify-self: end;
+       align-items: center;
+       gap: 8px;
+       span {
+        background-image: url(../assets/icons/seta.svg);
+        width: 16px;
+        height: 16px;
+       }
+    }
+}
+
 #featured img {
     height: 100%;
     object-fit: cover;
@@ -35,4 +52,31 @@ figcaption {
     h2 {
         margin-top: 8px;
     }
+}
+
+
+#weekly {
+    header 
+    &>div{
+        grid-template-columns: repeat(4, 292px);
+    }
+    img {
+        height: 160px;
+    }   
+    
+    figure {
+        position: relative;
+
+        .content-tag {
+            position: absolute;
+            top: 8px;
+            left: 8px;
+        }
+
+        p {
+            margin-top: 8px;
+            font-weight: 800; /*peso da letra*/
+        }
+    }
+
 }
